se ha añadido componentes y servicios para mejor orden de la app

--- a/pokedex/src/app/app.component.html
+++ b/pokedex/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{pokemonName}}</h1>
 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokeImage}}.png" />
-<input type="number" [(ngModel)]="pokemonNumber" placeholder="Enter a number">
+<!-- <input type="number" [(ngModel)]="pokemonNumber" placeholder="Enter a number"> -->
 
 <button (click)="searchPokemon()">Search</button>
