funcion de obtener datos del pokemon añadida

--- a/pokedex/src/app/app.component.html
+++ b/pokedex/src/app/app.component.html
@@ -3,3 +3,5 @@
 <!-- <input type="number" [(ngModel)]="pokemonNumber" placeholder="Enter a number"> -->
 
 <button (click)="searchPokemon()">Search</button>
+
+<app-poke-card/>
