se ha añadido el el codigo al search

--- a/pokedex/src/app/components/search/search.component.html
+++ b/pokedex/src/app/components/search/search.component.html
@@ -1,1 +1,4 @@
-<p>search works!</p>
+<!-- añade un input el cual ejecute la funcion "searchPokemon" al presionar la tecla enter, esta funcion recibe como parametros el evento  -->
+<input type="text" placeholder="Buscar Pokemon" (keyup.enter)="searchPokemon($event)">
+<!-- añadir boton de busqueda -->
+<!-- <button (click)="searchPokemon()">Buscar</button> -->
