--- a/pokedex/src/app/app.component.html
+++ b/pokedex/src/app/app.component.html
@@ -2,6 +2,7 @@
 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokeImage}}.png" />
 <!-- <input type="number" [(ngModel)]="pokemonNumber" placeholder="Enter a number"> -->
 
+<app-search (pokemonSelected)="setPokemonId($event)"/>
 <button (click)="searchPokemon()">Search</button>
 
 <app-poke-card/>
