input y outputs añadidos

--- a/pokedex/src/app/app.component.html
+++ b/pokedex/src/app/app.component.html
@@ -3,6 +3,6 @@
 <!-- <input type="number" [(ngModel)]="pokemonNumber" placeholder="Enter a number"> -->
 
 <app-search (pokemonSelected)="setPokemonId($event)"/>
-<button (click)="searchPokemon()">Search</button>
+<!-- <button (click)="searchPokemon()">Search</button> -->
 
-<app-poke-card/>
+<app-poke-card [pokemonId]="pokemonId"/>
