--- a/pokedex/src/app/app.component.html
+++ b/pokedex/src/app/app.component.html
@@ -1,7 +1,14 @@
-<h1>{{pokemonName}}</h1>
-<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokeImage}}.png" />
+<div class="main">
+
+    <img src="../assets/logo.png" alt="">
+
+
 <!-- <input type="number" [(ngModel)]="pokemonNumber" placeholder="Enter a number"> -->
 
 <button (click)="searchPokemon()">Search</button>
 
 <app-poke-card/>
+
+
+
+</div>
