--- a/pokedex/src/app/components/poke-card/poke-card.component.html
+++ b/pokedex/src/app/components/poke-card/poke-card.component.html
@@ -1,1 +1,8 @@
-<p>poke-card works!</p>
+<div class="card-img">
+    <div class="img-container">
+        <img src="https://unpkg.com/pokeapi-sprites@2.0.2/sprites/pokemon/other/dream-world/87.svg">
+    </div>
+
+    <p>Numero</p>
+    <h4>Nombre</h4>
+</div>
