--- a/pokedex/src/styles.scss
+++ b/pokedex/src/styles.scss
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-image: url(../src/assets/bkg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: 'Roboto', sans-serif;
+}
