--- a/pokedex/src/app/app.component.html
+++ b/pokedex/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="main">
 
     <img src="../assets/logo.png" alt="">
+
+    <h3>Ingresa un número y presiona enter</h3>
     <app-search (pokemonSelected)="setPokemonId($event)"/>
 
     <app-poke-card [pokemonId]="pokemonId"/>
