--- a/pokedex/src/app/components/poke-card/poke-card.component.html
+++ b/pokedex/src/app/components/poke-card/poke-card.component.html
@@ -3,6 +3,6 @@
         <img src="{{pokemonImage}}">
     </div>
 
-    <p>{{pokemonId}}</p>
+    <p>#{{pokemonId}}</p>
     <h4>{{pokemonName}}</h4>
 </div>
