--- a/pokedex/src/app/components/search/search.component.html
+++ b/pokedex/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
 <!-- añade un input el cual ejecute la funcion "searchPokemon" al presionar la tecla enter, esta funcion recibe como parametros el evento  -->
-<input type="text" placeholder="Buscar Pokemon" (keyup.enter)="searchPokemon($event)">
+<input type="text" class="search" placeholder="Buscar Pokemon" (keyup.enter)="searchPokemon($event)">
 <!-- añadir boton de busqueda -->
 <!-- <button (click)="searchPokemon()">Buscar</button> -->
